--- a/.github/workflows/canvas_to_notion.yml
+++ b/.github/workflows/canvas_to_notion.yml
@@ -2,10 +2,7 @@ name: Canvas → Notion Sync
 
 on:
   schedule:
-    # Every Monday at 6:00 PM Dubai (which is 14:00 UTC)
-    - cron: "0 14 * * MON"
-
-  # Allow manual run also
+    - cron: "0 14 * * 1"   # Monday 6 PM Dubai (UTC+4 = 14:00 UTC)
   workflow_dispatch:
 
 jobs:
@@ -13,37 +10,30 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    # ---------------------------------------------------
-    # 1) CHECKOUT REPOSITORY
-    # ---------------------------------------------------
-    - name: Checkout repository
-      uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-    # ---------------------------------------------------
-    # 2) SET UP PYTHON
-    # ---------------------------------------------------
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: "3.11"
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
 
-    # ---------------------------------------------------
-    # 3) INSTALL DEPENDENCIES
-    # ---------------------------------------------------
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install requests
+      - name: Install dependencies
+        run: |
+          pip install -r requirements.txt
 
-    # ---------------------------------------------------
-    # 4) RUN THE SYNC SCRIPT
-    # ---------------------------------------------------
-    - name: Run Canvas → Notion sync
-      env:
-        CANVAS_BASE_URL: https://dwight.instructure.com
-        CANVAS_API_TOKEN: ${{ secrets.CANVAS_API_TOKEN }}
-        CANVAS_COURSE_IDS: ${{ secrets.CANVAS_COURSE_IDS }}
-        NOTION_API_KEY: ${{ secrets.NOTION_API_KEY }}
-        NOTION_DATABASE_ID: ${{ secrets.NOTION_DATABASE_ID }}
-      run: |
-        python canvas_to_notion.py
+      - name: Run Canvas → Notion sync
+        env:
+          CANVAS_BASE_URL: "https://dwight.instructure.com"
+
+          # Canvas
+          CANVAS_API_TOKEN: ${{ secrets.CANVAS_API_TOKEN }}
+
+          # ⬇️ Not a secret anymore — replaced secrets with vars
+          CANVAS_COURSE_IDS: ${{ vars.CANVAS_COURSE_IDS }}
+
+          # Notion
+          NOTION_API_KEY: ${{ secrets.NOTION_API_KEY }}
+          NOTION_DATABASE_ID: ${{ secrets.NOTION_DATABASE_ID }}
+        run: |
+          python canvas_to_notion.py
