--- a/.github/workflows/canvas_to_notion.yml
+++ b/.github/workflows/canvas_to_notion.yml
@@ -1,39 +1,51 @@
 name: Canvas → Notion Sync
 
 on:
+  workflow_dispatch:   # manual run
   schedule:
-    - cron: "0 14 * * 1"   # Monday 6 PM Dubai (UTC+4 = 14:00 UTC)
-  workflow_dispatch:
+    - cron: "0 14 * * 1"   # Monday 14:00 UTC = Monday 18:00 Dubai
 
 jobs:
   sync:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+    # -----------------------------------------------------
+    # 1) CHECKOUT REPO
+    # -----------------------------------------------------
+    - name: Checkout repository
+      uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.10"
+    # -----------------------------------------------------
+    # 2) SET UP PYTHON
+    # -----------------------------------------------------
+    - name: Set up Python 3.11
+      uses: actions/setup-python@v4
+      with:
+        python-version: "3.11"
 
-      - name: Install dependencies
-        run: |
-          pip install -r requirements.txt
+    # -----------------------------------------------------
+    # 3) INSTALL DEPENDENCIES
+    # -----------------------------------------------------
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install requests
 
-      - name: Run Canvas → Notion sync
-        env:
-          CANVAS_BASE_URL: "https://dwight.instructure.com"
+    # -----------------------------------------------------
+    # 4) RUN THE SYNC SCRIPT
+    # -----------------------------------------------------
+    - name: Run Canvas → Notion sync
+      env:
+        # Canvas
+        CANVAS_BASE_URL: https://dwight.instructure.com
+        CANVAS_API_TOKEN: ${{ secrets.CANVAS_API_TOKEN }}
+        CANVAS_COURSE_IDS: ${{ vars.CANVAS_COURSE_IDS }}
 
-          # Canvas
-          CANVAS_API_TOKEN: ${{ secrets.CANVAS_API_TOKEN }}
+        # Notion - API Key + dynamic template logic
+        NOTION_API_KEY: ${{ secrets.NOTION_API_KEY }}
+        NOTION_TEMPLATE_DB_ID: ${{ vars.NOTION_TEMPLATE_DB_ID }}
+        NOTION_PARENT_PAGE_ID: ${{ vars.NOTION_PARENT_PAGE_ID }}
 
-          # ⬇️ Not a secret anymore — replaced secrets with vars
-          CANVAS_COURSE_IDS: ${{ vars.CANVAS_COURSE_IDS }}
-
-          # Notion
-          NOTION_API_KEY: ${{ secrets.NOTION_API_KEY }}
-          NOTION_DATABASE_ID: ${{ secrets.NOTION_DATABASE_ID }}
-        run: |
-          python canvas_to_notion.py
+      run: |
+        python canvas_to_notion.py
