--- a/.github/workflows/canvas_to_notion.yml
+++ b/.github/workflows/canvas_to_notion.yml
@@ -1,51 +1,42 @@
-name: Canvas → Notion Sync
+name: Canvas → Notion – Weekly Sync
 
 on:
-  workflow_dispatch:   # manual run
   schedule:
-    - cron: "0 14 * * 1"   # Monday 14:00 UTC = Monday 18:00 Dubai
+    # Every Monday at 18:00 Dubai time (UTC+4) => 14:00 UTC
+    - cron: "0 14 * * MON"
+  workflow_dispatch: {}
 
 jobs:
   sync:
     runs-on: ubuntu-latest
 
     steps:
-    # -----------------------------------------------------
-    # 1) CHECKOUT REPO
-    # -----------------------------------------------------
-    - name: Checkout repository
-      uses: actions/checkout@v4
+      - name: Check out repository
+        uses: actions/checkout@v4
 
-    # -----------------------------------------------------
-    # 2) SET UP PYTHON
-    # -----------------------------------------------------
-    - name: Set up Python 3.11
-      uses: actions/setup-python@v4
-      with:
-        python-version: "3.11"
+      - name: Set up Python 3.11
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
 
-    # -----------------------------------------------------
-    # 3) INSTALL DEPENDENCIES
-    # -----------------------------------------------------
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install requests
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-    # -----------------------------------------------------
-    # 4) RUN THE SYNC SCRIPT
-    # -----------------------------------------------------
-    - name: Run Canvas → Notion sync
-      env:
-        # Canvas
-        CANVAS_BASE_URL: https://dwight.instructure.com
-        CANVAS_API_TOKEN: ${{ secrets.CANVAS_API_TOKEN }}
-        CANVAS_COURSE_IDS: ${{ vars.CANVAS_COURSE_IDS }}
+      - name: Run Canvas → Notion sync
+        env:
+          # CANVAS
+          CANVAS_BASE_URL: https://dwight.instructure.com
+          CANVAS_API_TOKEN: ${{ secrets.CANVAS_API_TOKEN }}
+          # Optional filter – *repository variable* (not secret)
+          CANVAS_COURSE_IDS: ${{ vars.CANVAS_COURSE_IDS }}
 
-        # Notion - API Key + dynamic template logic
-        NOTION_API_KEY: ${{ secrets.NOTION_API_KEY }}
-        NOTION_TEMPLATE_DB_ID: ${{ vars.NOTION_TEMPLATE_DB_ID }}
-        NOTION_PARENT_PAGE_ID: ${{ vars.NOTION_PARENT_PAGE_ID }}
-
-      run: |
-        python canvas_to_notion.py
+          # NOTION
+          NOTION_API_KEY: ${{ secrets.NOTION_API_KEY }}
+          # Parent page that holds the child database (same one n8n uses)
+          NOTION_PARENT_PAGE_ID: ${{ vars.NOTION_PARENT_PAGE_ID }}
+          # Database title – same as in n8n
+          NOTION_DB_TITLE: ${{ vars.NOTION_DB_TITLE }}
+        run: |
+          python canvas_to_notion.py
