--- a/.github/workflows/canvas_to_notion.yml
+++ b/.github/workflows/canvas_to_notion.yml
@@ -1,42 +1,36 @@
-name: Canvas → Notion – Weekly Sync
+name: Canvas → Notion Sync
 
 on:
   schedule:
-    # Every Monday at 18:00 Dubai time (UTC+4) => 14:00 UTC
-    - cron: "0 14 * * MON"
-  workflow_dispatch: {}
+    - cron: "0 14 * * MON"   # Monday 14:00 UTC = 18:00 Dubai
+  workflow_dispatch:
 
 jobs:
   sync:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Check out repository
-        uses: actions/checkout@v4
+      - name: Checkout repo
+        uses: actions/checkout@v3
 
-      - name: Set up Python 3.11
-        uses: actions/setup-python@v5
+      - name: Set up Python
+        uses: actions/setup-python@v4
         with:
           python-version: "3.11"
 
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        run: pip install requests
 
       - name: Run Canvas → Notion sync
         env:
-          # CANVAS
-          CANVAS_BASE_URL: https://dwight.instructure.com
+          CANVAS_BASE_URL: "https://dwight.instructure.com"
           CANVAS_API_TOKEN: ${{ secrets.CANVAS_API_TOKEN }}
-          # Optional filter – *repository variable* (not secret)
           CANVAS_COURSE_IDS: ${{ vars.CANVAS_COURSE_IDS }}
-
-          # NOTION
           NOTION_API_KEY: ${{ secrets.NOTION_API_KEY }}
-          # Parent page that holds the child database (same one n8n uses)
-          NOTION_PARENT_PAGE_ID: ${{ vars.NOTION_PARENT_PAGE_ID }}
-          # Database title – same as in n8n
-          NOTION_DB_TITLE: ${{ vars.NOTION_DB_TITLE }}
+          NOTION_PARENT_PAGE_ID: ${{ secrets.NOTION_PARENT_PAGE_ID }}
+          NOTION_DATABASE_NAME: ${{ vars.NOTION_DATABASE_NAME }}
+          DUE_DATE_PERIOD_START: ${{ vars.DUE_DATE_PERIOD_START }}
+          DUE_DATE_PERIOD_END: ${{ vars.DUE_DATE_PERIOD_END }}
+          INCLUDE_ASSIGNMENTS_WITHOUT_DUE_DATE: ${{ vars.INCLUDE_ASSIGNMENTS_WITHOUT_DUE_DATE }}
         run: |
           python canvas_to_notion.py
