--- a/.github/workflows/canvas_to_notion.yml
+++ b/.github/workflows/canvas_to_notion.yml
@@ -23,14 +23,15 @@ jobs:
 
       - name: Run Canvas → Notion sync
         env:
-          CANVAS_BASE_URL: "https://dwight.instructure.com"
-          CANVAS_API_TOKEN: ${{ secrets.CANVAS_API_TOKEN }}
-          CANVAS_COURSE_IDS: ${{ vars.CANVAS_COURSE_IDS }}
-          NOTION_API_KEY: ${{ secrets.NOTION_API_KEY }}
-          NOTION_PARENT_PAGE_ID: ${{ secrets.NOTION_PARENT_PAGE_ID }}
-          NOTION_DATABASE_NAME: ${{ vars.NOTION_DATABASE_NAME }}
-          DUE_DATE_PERIOD_START: ${{ vars.DUE_DATE_PERIOD_START }}
-          DUE_DATE_PERIOD_END: ${{ vars.DUE_DATE_PERIOD_END }}
-          INCLUDE_ASSIGNMENTS_WITHOUT_DUE_DATE: ${{ vars.INCLUDE_ASSIGNMENTS_WITHOUT_DUE_DATE }}
+          env:
+            CANVAS_BASE_URL: "https://dwight.instructure.com"
+            CANVAS_API_TOKEN: ${{ secrets.CANVAS_API_TOKEN }}
+            CANVAS_COURSE_IDS: ${{ vars.CANVAS_COURSE_IDS }}
+            NOTION_API_KEY: ${{ secrets.NOTION_API_KEY }}
+            NOTION_PARENT_PAGE_ID: ${{ vars.NOTION_PARENT_PAGE_ID }}
+            NOTION_DATABASE_NAME: ${{ vars.NOTION_DATABASE_NAME }}
+            DUE_DATE_PERIOD_START: ${{ vars.DUE_DATE_PERIOD_START }}
+            DUE_DATE_PERIOD_END: ${{ vars.DUE_DATE_PERIOD_END }}
+            INCLUDE_ASSIGNMENTS_WITHOUT_DUE_DATE: ${{ vars.INCLUDE_ASSIGNMENTS_WITHOUT_DUE_DATE }}
         run: |
           python canvas_to_notion.py
