--- a/.github/workflows/canvas_to_notion.yml
+++ b/.github/workflows/canvas_to_notion.yml
@@ -2,7 +2,7 @@ name: Canvas → Notion Sync
 
 on:
   schedule:
-    - cron: "0 14 * * MON"   # Monday 14:00 UTC = 18:00 Dubai
+    - cron: "0 14 * * 1"   # Monday 6PM Dubai time (UTC+4 → UTC=14:00)
   workflow_dispatch:
 
 jobs:
@@ -10,28 +10,34 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
+      - name: Check out repo
+        uses: actions/checkout@v4
 
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.11"
 
-      - name: Install dependencies
-        run: pip install requests
+      - name: Install deps
+        run: |
+          python -m pip install --upgrade pip
+          pip install requests python-dateutil
 
       - name: Run Canvas → Notion sync
         env:
-          env:
-            CANVAS_BASE_URL: "https://dwight.instructure.com"
-            CANVAS_API_TOKEN: ${{ secrets.CANVAS_API_TOKEN }}
-            CANVAS_COURSE_IDS: ${{ vars.CANVAS_COURSE_IDS }}
-            NOTION_API_KEY: ${{ secrets.NOTION_API_KEY }}
-            NOTION_PARENT_PAGE_ID: ${{ vars.NOTION_PARENT_PAGE_ID }}
-            NOTION_DATABASE_NAME: ${{ vars.NOTION_DATABASE_NAME }}
-            DUE_DATE_PERIOD_START: ${{ vars.DUE_DATE_PERIOD_START }}
-            DUE_DATE_PERIOD_END: ${{ vars.DUE_DATE_PERIOD_END }}
-            INCLUDE_ASSIGNMENTS_WITHOUT_DUE_DATE: ${{ vars.INCLUDE_ASSIGNMENTS_WITHOUT_DUE_DATE }}
+          CANVAS_BASE_URL: ${{ secrets.CANVAS_BASE_URL }}
+          CANVAS_API_TOKEN: ${{ secrets.CANVAS_API_TOKEN }}
+
+          # REPOSITORY VARIABLES
+          CANVAS_COURSE_IDS: ${{ vars.CANVAS_COURSE_IDS }}
+
+          NOTION_API_KEY: ${{ secrets.NOTION_API_KEY }}
+          NOTION_PARENT_PAGE_ID: ${{ vars.NOTION_PARENT_PAGE_ID }}
+          NOTION_DB_TITLE: ${{ vars.NOTION_DB_TITLE }}
+
+          DUE_DATE_PERIOD_START: ${{ vars.DUE_DATE_PERIOD_START }}
+          DUE_DATE_PERIOD_END: ${{ vars.DUE_DATE_PERIOD_END }}
+          INCLUDE_ASSIGNMENTS_WITHOUT_DUE_DATE: ${{ vars.INCLUDE_ASSIGNMENTS_WITHOUT_DUE_DATE }}
+
         run: |
           python canvas_to_notion.py
