--- a/.github/workflows/canvas_to_notion.yml
+++ b/.github/workflows/canvas_to_notion.yml
@@ -1,43 +1,62 @@
-name: Canvas → Notion Sync
+def filter_assignments_by_due_date(assignments):
+    """
+    Filters assignments based on optional repository variables:
+      DUE_DATE_PERIOD_START (YYYY-MM-DD)
+      DUE_DATE_PERIOD_END   (YYYY-MM-DD)
+    """
 
-on:
-  schedule:
-    - cron: "0 14 * * 1"   # Monday 6PM Dubai time (UTC+4 → UTC=14:00)
-  workflow_dispatch:
+    start_str = os.environ.get("DUE_DATE_PERIOD_START", "").strip()
+    end_str = os.environ.get("DUE_DATE_PERIOD_END", "").strip()
 
-jobs:
-  sync:
-    runs-on: ubuntu-latest
+    if not start_str and not end_str:
+        print("📅 No due-date filters applied.")
+        return assignments
 
-    steps:
-      - name: Check out repo
-        uses: actions/checkout@v4
+    start_date = None
+    end_date = None
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.11"
+    if start_str:
+        try:
+            start_date = datetime.fromisoformat(start_str).date()
+        except:
+            print(f"⚠️ Invalid DUE_DATE_PERIOD_START: {start_str}")
 
-      - name: Install deps
-        run: |
-          python -m pip install --upgrade pip
-          pip install requests python-dateutil
+    if end_str:
+        try:
+            end_date = datetime.fromisoformat(end_str).date()
+        except:
+            print(f"⚠️ Invalid DUE_DATE_PERIOD_END: {end_str}")
 
-      - name: Run Canvas → Notion sync
-        env:
-          CANVAS_BASE_URL: ${{ secrets.CANVAS_BASE_URL }}
-          CANVAS_API_TOKEN: ${{ secrets.CANVAS_API_TOKEN }}
+    filtered = []
 
-          # REPOSITORY VARIABLES
-          CANVAS_COURSE_IDS: ${{ vars.CANVAS_COURSE_IDS }}
+    for cid, assignment in assignments:
+        due_at = assignment.get("due_at")
 
-          NOTION_API_KEY: ${{ secrets.NOTION_API_KEY }}
-          NOTION_PARENT_PAGE_ID: ${{ vars.NOTION_PARENT_PAGE_ID }}
-          NOTION_DB_TITLE: ${{ vars.NOTION_DB_TITLE }}
+        if not due_at:
+            continue  # skip assignments with no due date
 
-          DUE_DATE_PERIOD_START: ${{ vars.DUE_DATE_PERIOD_START }}
-          DUE_DATE_PERIOD_END: ${{ vars.DUE_DATE_PERIOD_END }}
-          INCLUDE_ASSIGNMENTS_WITHOUT_DUE_DATE: ${{ vars.INCLUDE_ASSIGNMENTS_WITHOUT_DUE_DATE }}
+        try:
+            due_date = datetime.fromisoformat(due_at.replace("Z", "+00:00")).date()
+        except:
+            continue
 
-        run: |
-          python canvas_to_notion.py
+        # CASE 1 — Both start and end
+        if start_date and end_date:
+            if start_date <= due_date <= end_date:
+                filtered.append((cid, assignment))
+            continue
+
+        # CASE 2 — Only end
+        if end_date:
+            if due_date <= end_date:
+                filtered.append((cid, assignment))
+            continue
+
+        # CASE 3 — Only start
+        if start_date:
+            if due_date >= start_date:
+                filtered.append((cid, assignment))
+            continue
+
+    print(f"📅 Due-date filter reduced assignments from {len(assignments)} → {len(filtered)}")
+    return filtered
