--- a/.github/workflows/canvas_to_notion.yml
+++ b/.github/workflows/canvas_to_notion.yml
@@ -1,62 +1,41 @@
-def filter_assignments_by_due_date(assignments):
-    """
-    Filters assignments based on optional repository variables:
-      DUE_DATE_PERIOD_START (YYYY-MM-DD)
-      DUE_DATE_PERIOD_END   (YYYY-MM-DD)
-    """
+name: Canvas → Notion (Assignments Sync)
 
-    start_str = os.environ.get("DUE_DATE_PERIOD_START", "").strip()
-    end_str = os.environ.get("DUE_DATE_PERIOD_END", "").strip()
+on:
+  schedule:
+    # Every Monday 14:00 UTC = 6:00 PM Dubai (UTC+4)
+    - cron: "0 14 * * 1"
+  workflow_dispatch:
 
-    if not start_str and not end_str:
-        print("📅 No due-date filters applied.")
-        return assignments
+jobs:
+  canvas-to-notion:
+    runs-on: ubuntu-latest
 
-    start_date = None
-    end_date = None
+    env:
+      # Canvas
+      CANVAS_BASE_URL: https://dwight.instructure.com
+      CANVAS_API_TOKEN: ${{ secrets.CANVAS_API_TOKEN }}
+      # You moved this to Repository Variables (non-secret)
+      CANVAS_COURSE_IDS: ${{ vars.CANVAS_COURSE_IDS }}
 
-    if start_str:
-        try:
-            start_date = datetime.fromisoformat(start_str).date()
-        except:
-            print(f"⚠️ Invalid DUE_DATE_PERIOD_START: {start_str}")
+      # Notion
+      NOTION_API_KEY: ${{ secrets.NOTION_API_KEY }}
+      # Same parent page ID you used in n8n
+      NOTION_PARENT_PAGE_ID: ${{ secrets.NOTION_PARENT_PAGE_ID }}
 
-    if end_str:
-        try:
-            end_date = datetime.fromisoformat(end_str).date()
-        except:
-            print(f"⚠️ Invalid DUE_DATE_PERIOD_END: {end_str}")
+    steps:
+      - name: Check out repository
+        uses: actions/checkout@v4
 
-    filtered = []
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
 
-    for cid, assignment in assignments:
-        due_at = assignment.get("due_at")
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install requests
 
-        if not due_at:
-            continue  # skip assignments with no due date
-
-        try:
-            due_date = datetime.fromisoformat(due_at.replace("Z", "+00:00")).date()
-        except:
-            continue
-
-        # CASE 1 — Both start and end
-        if start_date and end_date:
-            if start_date <= due_date <= end_date:
-                filtered.append((cid, assignment))
-            continue
-
-        # CASE 2 — Only end
-        if end_date:
-            if due_date <= end_date:
-                filtered.append((cid, assignment))
-            continue
-
-        # CASE 3 — Only start
-        if start_date:
-            if due_date >= start_date:
-                filtered.append((cid, assignment))
-            continue
-
-    print(f"📅 Due-date filter reduced assignments from {len(assignments)} → {len(filtered)}")
-    return filtered
+      - name: Run Canvas → Notion sync
+        run: |
+          python canvas_to_notion.py
