--- a/.github/workflows/canvas_to_notion.yml
+++ b/.github/workflows/canvas_to_notion.yml
@@ -1,4 +1,4 @@
-name: Canvas → Notion (Assignments Sync)
+name: Canvas → Notion (Assignments Sync with Due-Date Filter)
 
 on:
   schedule:
@@ -14,13 +14,22 @@ jobs:
       # Canvas
       CANVAS_BASE_URL: https://dwight.instructure.com
       CANVAS_API_TOKEN: ${{ secrets.CANVAS_API_TOKEN }}
-      # You moved this to Repository Variables (non-secret)
+      # Repository variable (string like "7229,7243") – can be empty
       CANVAS_COURSE_IDS: ${{ vars.CANVAS_COURSE_IDS }}
 
       # Notion
       NOTION_API_KEY: ${{ secrets.NOTION_API_KEY }}
-      # Same parent page ID you used in n8n
+      # Same parent page ID you used in n8n (store as repository variable)
       NOTION_PARENT_PAGE_ID: ${{ vars.NOTION_PARENT_PAGE_ID }}
+      # Optional – database title; or leave blank to use default
+      NOTION_DATABASE_NAME: ${{ vars.NOTION_DATABASE_NAME }}
+
+      # Due-date filter window (repository variables – strings)
+      # e.g. "2025-11-20", "2025-11-30" or "" if unused
+      DUE_DATE_PERIOD_START: ${{ vars.DUE_DATE_PERIOD_START }}
+      DUE_DATE_PERIOD_END: ${{ vars.DUE_DATE_PERIOD_END }}
+      # "true" / "false" (string) – repository variable
+      INCLUDE_ASSIGNMENTS_WITHOUT_DUE_DATE: ${{ vars.INCLUDE_ASSIGNMENTS_WITHOUT_DUE_DATE }}
 
     steps:
       - name: Check out repository
