--- a/.github/workflows/canvas_to_notion.yml
+++ b/.github/workflows/canvas_to_notion.yml
@@ -1,4 +1,4 @@
-name: Canvas → Notion (Assignments Sync – due-date filter)
+name: Canvas → Notion (Assignments Sync – Due-Date Filter)
 
 on:
   schedule:
@@ -12,18 +12,16 @@ jobs:
 
     env:
       # Canvas
-      CANVAS_BASE_URL: https://dwight.instructure.com
+      CANVAS_BASE_URL: "https://dwight.instructure.com"
       CANVAS_API_TOKEN: ${{ secrets.CANVAS_API_TOKEN }}
       CANVAS_COURSE_IDS: ${{ vars.CANVAS_COURSE_IDS }}
 
       # Notion
       NOTION_API_KEY: ${{ secrets.NOTION_API_KEY }}
       NOTION_PARENT_PAGE_ID: ${{ vars.NOTION_PARENT_PAGE_ID }}
-      # Optional override; otherwise Python defaults to
-      # "Canvas Course - Track Assignments"
-      NOTION_DATABASE_NAME: ${{ vars.NOTION_DB_TITLE }}
+      NOTION_DB_TITLE: ${{ vars.NOTION_DB_TITLE }}
 
-      # Due-date filtering (branch feature)
+      # Due-date filter (branch feature)
       DUE_DATE_PERIOD_START: ${{ vars.DUE_DATE_PERIOD_START }}
       DUE_DATE_PERIOD_END: ${{ vars.DUE_DATE_PERIOD_END }}
       INCLUDE_ASSIGNMENTS_WITHOUT_DUE_DATE: ${{ vars.INCLUDE_ASSIGNMENTS_WITHOUT_DUE_DATE }}
@@ -42,6 +40,6 @@ jobs:
           python -m pip install --upgrade pip
           pip install requests
 
-      - name: Run Canvas → Notion sync
+      - name: Run sync
         run: |
           python canvas_to_notion.py
