--- a/.github/workflows/canvas_to_notion.yml
+++ b/.github/workflows/canvas_to_notion.yml
@@ -1,8 +1,8 @@
-name: Canvas → Notion (Assignments Sync – Due-Date Filter)
+name: Canvas → Notion (Assignments Sync)
 
 on:
   schedule:
-    # Every Monday 14:00 UTC = 6:00 PM Dubai (UTC+4)
+    # Every Monday at 14:00 UTC = 6:00 PM Dubai
     - cron: "0 14 * * 1"
   workflow_dispatch:
 
@@ -19,9 +19,9 @@ jobs:
       # Notion
       NOTION_API_KEY: ${{ secrets.NOTION_API_KEY }}
       NOTION_PARENT_PAGE_ID: ${{ vars.NOTION_PARENT_PAGE_ID }}
-      NOTION_DB_TITLE: ${{ vars.NOTION_DB_TITLE }}
+      NOTION_DATABASE_NAME: ${{ vars.NOTION_DATABASE_NAME }}
 
-      # Due-date filter (branch feature)
+      # Date Filters (from repository variables)
       DUE_DATE_PERIOD_START: ${{ vars.DUE_DATE_PERIOD_START }}
       DUE_DATE_PERIOD_END: ${{ vars.DUE_DATE_PERIOD_END }}
       INCLUDE_ASSIGNMENTS_WITHOUT_DUE_DATE: ${{ vars.INCLUDE_ASSIGNMENTS_WITHOUT_DUE_DATE }}
@@ -40,6 +40,6 @@ jobs:
           python -m pip install --upgrade pip
           pip install requests
 
-      - name: Run sync
+      - name: Run Canvas → Notion sync
         run: |
           python canvas_to_notion.py
